# raspberry-mcp

./: .gitignore  README.md  pyproject.toml
client/: README.md  anime.lua  anime_auth.py
src/local_mcp/: auth.py  server.py  settings.py  token_db.py  watch.py
src/local_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/local_mcp/lib/: __init__.py  anime.py  music.py  ratings.py  torrent.py
src/local_mcp/templates/: login.html
src/local_mcp/tools/: __init__.py  anime.py  music.py
tests/: conftest.py  test_anime.py  test_auth.py  test_music.py  test_ratings.py  test_settings.py  test_stateless_http.py  test_token_db.py  test_torrent_search.py
