[project]
name = "local-mcp"
version = "0.1.0"
description = "Local MCP server with music/MPD control tools"
authors = [{ name = "Dan" }]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14.2",
    "python-dotenv",
    "httpx",
    "beautifulsoup4",
    "passlib[bcrypt]",
    "bcrypt<4.1",      # passlib compatibility (4.1 removed __about__)
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
local-mcp = "local_mcp.server:main"
anime-check = "local_mcp.lib.anime:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
